k8s/apps/free-games-claimer/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: free-games-claimer
  namespace: free-games-claimer
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: free-games-claimer
  template:
    metadata:
      labels:
        app: free-games-claimer
    spec:
      containers:
        - name: free-games-claimer
          image: ghcr.io/feldorn/free-games-claimer:latest
          ports:
            - containerPort: 6080
              name: novnc
            - containerPort: 7080
              name: panel
          volumeMounts:
            - name: data
              mountPath: /fgc/data
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "2Gi"
              cpu: "2"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: free-games-claimer-data
